[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pano_clear"
version = "1.0.0"
description = "AI-based enhancement and super-resolution for dental panoramic X-rays"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Hyunchan An" }
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pydicom>=2.4.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.3.3"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pano_clear"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
